# idealintent-julia

./: README.md  RUST_BACKTRACE=1  pubspec.yaml
rust/: Cargo.toml  Readme.md
rust/src/: api.rs  api_example.rs  bridge_generated.rs  bridge_generated_example.rs  build.rs  compositions_api.rs  config.rs  lib.rs  main.rs
rust/src/account/: mod.rs
rust/src/compositions/: base_comp_result.rs  composition_index.rs  composition_relationships.rs  manager_impl.rs  mod.rs
rust/src/compositions/banners/: banner_basic.rs  banner_enums.rs  manager.rs  mod.rs
rust/src/compositions/carousels/: carousel_basic.rs  carousel_blurred_overlay.rs  carousel_enums.rs  carousel_images.rs  manager.rs  mod.rs
rust/src/compositions/paragraphs/: manager.rs  mod.rs  paragraph_basic.rs  paragraph_enums.rs
rust/src/compositions/texts/: mod.rs
rust/src/gencode/: mod.rs
rust/src/gencode/gen_managers/: builder.rs  composition_type_manager_method.rs  gen_manager.rs  gen_manager_dependencies.rs  mod.rs
rust/src/gencode/gen_managers/helpers/: get_all_composition_res_variants_enums.rs  get_composition_metadata.rs  get_composition_name.rs  get_composition_paths.rs  get_composition_res_enum.rs  (+3 more)
rust/src/helpers/: mod.rs  parse_ipfs_object.rs
rust/src/services/: main.rs
rust/src/space/: composition_association.rs  compositions_arrangement.rs  layout.rs  mod.rs  relationship_enums.rs  space_enums.rs
rust/src/temp_smart_contract_address_maps/: crud_address_smart_contract.rs  crud_paragraph.rs  crud_text.rs  encryption.rs  mod.rs
rust/src/tests/: compositions_test.rs  mod.rs  test.rs
(+33 files in other folders)
