[package]
name = "flutter_rust_bridge_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "flutter_rust_bridge_example"
crate-type = ["cdylib"]

[dependencies]
bundler = "0.1"
futures = "0.3"
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }
codegen = "0.1.3"
flutter_rust_bridge = "1.34.0"
flutter_rust_bridge_codegen = "1.34.0"
num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.2" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
strum = "0.24.0"
strum_macros = "0.24.0"
#ipfsapi = "0.2"
ipfs-api-backend-actix = "0.5"
log = "0.4.10"
firebase-rs = "2.0.1"
cortex-m = "0.7.4"
serde = "1.0.137"
serde_json = "1.0.81"
#dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
actix-rt = "*"
firestore_grpc = "0.109"
chacha20poly1305 = "0.9.0"
rustsourcebundler = { git = "https://github.com/lpenz/rust-sourcebundler" }
